# computer-engineering-undergraduate-program

./: .gitmodules  README.md  template.md
1.1-artificial-intelligence-basics/: README.md  manifest.toml
1.1-computational-thinking-for-engineering/: README.md  manifest.toml
1.1-introduction-to-engineering-design/: README.md  manifest.toml
1.2-software-programming-basics-and-practice/: README.md  manifest.toml
2.1-c-programming-and-practice/: README.md  manifest.toml  template.md
2.1-iot-computing/: README.md  manifest.toml
2.1-java-programming-and-practice/: README.md  manifest.toml
2.1-linear-algebra/: README.md  manifest.toml
2.1-linux-system-and-practice/: README.md  manifest.toml
2.1-logic-circuits-design/: README.md  manifest.toml
2.2-advanced-computer-programming-and-practice/: README.md  manifest.toml
2.2-ai-math-datascience-2/: README.md  manifest.toml
2.2-data-structures/: README.md  manifest.toml
2.2-introduction-to-programming-2/: README.md  manifest.toml
2.2-programming-practice-2/: README.md  manifest.toml
3.1-artificial-intelligence/: README.md  macOS-Initialize.ipynb  manifest.toml
3.1-data-base-systems/: README.md  manifest.toml
3.1-operating-system/: README.md  manifest.toml
3.1-software-enginnering/: README.md  manifest.toml
3.1-web-programming/: README.md  manifest.toml
3.2-computer-engineering-project1(capstone-design)/: README.md  manifest.toml
3.2-embedded-software/tasks/2024-12-01/src/: .gitignore  README.md  pyproject.toml
3.2-embedded-software/tasks/2024-12-01/src/src/: requirements.txt  run.py  train.py
(+1171 files in other folders)
