[project]
name = "2024-12-01"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Jonghyeon Park", email = "belline0124@gmail.com" }
]
dependencies = [
    "numpy==1.26.4",
    "seaborn==0.13.2",
    "tensorflow==2.18.0",
    "pyaudio>=0.2.14",
    "scipy>=1.14.1",
    "matplotlib>=3.9.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
train = "python src/train.py"
run = "python src/run.py"
test = "python src/run.py --test"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/_2024_12_01"]
